src/objects/Field_of_Play__c.object
<CustomObject>
    <description>SAM Integration for Multiple Gold Sheets</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>SAM Field of Play Gold Sheet Integration</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Field of Play</relationshipLabel>
        <relationshipName>Field_of_Play</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>mh_Additional_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Additional Notes Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Associated_Gold_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration FOP</description>
        <label>Associated Gold Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Charter_Statement__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Charter Statement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_Critical_Vulnerability__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Critical Vulnerability</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_FOP_Opportunites__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP Opportunites</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_FOP_Trends__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP Trends</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_1_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP View 1 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_3_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP View 3 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_Last_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP View Last Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_FOP_View_Now__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>FOP View Now</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_Goals__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Goals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mh_Gold_Sheet_Created_Date__c</fullName>
        <label>Gold Sheet Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mh_Last_Updated_Gold_Sheet__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Last Updated Gold Sheet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mh_Managers_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Managers Notes Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Managers_Review_Date__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Managers Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mh_Our_View_1_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Our View 1 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_Our_View_3_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Our View 3 Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_Our_View_Last_Yr__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Our View Last Yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_Our_View_Now__c</fullName>
        <description>SAM Integration FOP Gold Sheet</description>
        <label>Our View Now</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Field of Play</label>
    <nameField>
        <label>Field of Play Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field of Play</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>